--- a/MovieDBTraining/app/build.gradle
+++ b/MovieDBTraining/app/build.gradle
@@ -1,17 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "26.0.0"
+  compileSdkVersion compile_sdk_version
+  buildToolsVersion build_tools_version
+  //useLibrary 'org.apache.http.legacy'
+
   defaultConfig {
     applicationId "com.framgia.moviedbtraining"
-    minSdkVersion 16
-    targetSdkVersion 25
+    minSdkVersion min_sdk_version
+
+    targetSdkVersion target_sdk_version
     versionCode 1
     versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
     release {
@@ -19,6 +22,17 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+  }
+
+  dataBinding {
+    enabled = true
+  }
+}
+kapt {
+  generateStubs = true
 }
 
 dependencies {
@@ -26,10 +40,13 @@ dependencies {
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile 'com.android.support:appcompat-v7:25.3.1'
+  compile 'com.android.support:appcompat-v7:25.4.0'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   testCompile 'junit:junit:4.12'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  //Retrofit
+  compile 'com.squareup.retrofit2:retrofit:2.3.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
 repositories {
   mavenCentral()
