--- a/MovieDBTraining/build.gradle
+++ b/MovieDBTraining/build.gradle
@@ -1,25 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.1.2-5'
+  ext.kotlin_version = '1.1.3'
+  ext.groovy_version = '1.2.0'
+  ext.android_plugin_version = '3.0.0-alpha4'
   repositories {
     jcenter()
+    maven { url 'https://maven.google.com' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
+    classpath "org.codehaus.groovy:groovy-android-gradle-plugin:$groovy_version"
+    classpath "com.android.tools.build:gradle:$android_plugin_version"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
 allprojects {
   repositories {
     jcenter()
+    maven { url 'https://maven.google.com' }
+    maven { url "https://jitpack.io" }
   }
 }
+ext {
+  min_sdk_version = 16
+  target_sdk_version = 25
+  compile_sdk_version = 25
+  build_tools_version = '25.0.3'
 
 task clean(type: Delete) {
   delete rootProject.buildDir
@@ -36,4 +44,7 @@ ext{
   rxAdapterVersion = '2.0.1'
   loggingVersion = '3.2.0'
   gsonConverterVersion = '2.0.2'
+}
+  android_support_version = '25.4.0'
+  android_constraint_version = '1.0.2'
 }
