--- a/MovieDBTraining/app/build.gradle
+++ b/MovieDBTraining/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
   testCompile 'junit:junit:4.12'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
+  //Retrofit
+  compile 'com.squareup.retrofit2:retrofit:2.3.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
 repositories {
   mavenCentral()
