--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,11 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  dataBinding {
+    enabled = true
+  }
 }
+
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
