--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".rated.RatedActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".login.LoginActivity"/>
+        <activity android:name=".login.LoginActivity"
+            android:screenOrientation="portrait" />/>
     </application>
 
 </manifest>
