--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".rated.RatedActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".login.LoginActivity"/>
     </application>
 
 </manifest>
