--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
   ext.kotlin_version = '1.1.2-5'
+  ext.plugin_gradle_version = '2.3.2'
   repositories {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.2'
+    classpath "com.android.tools.build:gradle:$plugin_gradle_version"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
@@ -28,7 +29,7 @@ ext{
   supportLibraryVersion = '25.3.1'
   gsonVersion = '2.8.0'
   glideVersion = '3.7.0'
-  retrofitVersion = '2.0.2'
+  retrofitVersion = '2.3.0'
   okhttpVersion = '3.3.0'
   daggerVersion = '2.11'
   rxjavaVersion = '1.1.5'
@@ -36,4 +37,5 @@ ext{
   rxAdapterVersion = '2.0.1'
   loggingVersion = '3.2.0'
   gsonConverterVersion = '2.0.2'
+  constraintVersion = '1.0.2'
 }
