--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply from: "../checkci.gradle"
 
 android {
@@ -35,13 +36,13 @@ dependencies {
   compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
   compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
   compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-  testCompile 'junit:junit:4.12'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
-  //Retrofit
-  compile 'com.squareup.retrofit2:retrofit:2.3.0'
-  compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+  compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintVersion"
+  compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
+  compile "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
+  testCompile 'junit:junit:4.12'
+  kapt "com.android.databinding:compiler:$rootProject.ext.plugin_gradle_version"
 }
 repositories {
   mavenCentral()
