Movie Details Interface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".profile.ProfileActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".movieDetails.MovieDetailsActivity"/>
     </application>
 
 </manifest>
