--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    buildConfigField "int", "DATABASE_VERSION", "1";
   }
   buildTypes {
     release {
@@ -41,6 +42,7 @@ dependencies {
   compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintVersion"
   compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
   compile "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
+  compile "com.j256.ormlite:ormlite-android:$rootProject.ext.ormLiteVersion"
   testCompile 'junit:junit:4.12'
   kapt "com.android.databinding:compiler:$rootProject.ext.plugin_gradle_version"
 }
